# CodeKata

./: README.md
CodeKata/AccountManager/: CMakeLists.txt  main.cpp
CodeKata/AccountManager/src/: CMakeLists.txt
CodeKata/AccountManager/test/: CMakeLists.txt  main.cpp
CodeKata/AccountManager/test/tests/: CMakeLists.txt  test.cpp
CodeKata/GMock/gtest/msvc/: UpgradeLog.XML  gtest.ncb  gtest.sln  gtest_main.vcproj  gtest_prod_test.vcproj  gtest_unittest.vcproj
CodeKata/GMock/gtest/msvc/gtest/Debug/: gtest_maind.lib  gtest_prod_test.ilk
CodeKata/GMock/gtest/msvc/gtest/Debug/gtest/: BuildLog.htm  vc80.idb
CodeKata/GMock/gtest/msvc/gtest/Debug/gtest_main/: BuildLog.htm  vc80.idb
CodeKata/GMock/gtest/msvc/gtest/Debug/gtest_prod_test/: BuildLog.htm  vc80.idb
CodeKata/GMock/gtest/msvc/gtest/Debug/gtest_unittest/: BuildLog.htm  mt.dep  vc80.idb
CodeKata/GMock/include/gmock/: gmock.h
CodeKata/GMock/lib/windows_msvc/: gmock.lib  gmock_main.lib  gmock_maind.lib
CodeKata/GMock/lib/windows_msvc2013/: gmock_maind.lib  gmockd.lib
CodeKata/GMock/lib/windows_msvc_1Bpadding/: gmock_maind.lib
